# aoc-2020

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  conanfile.txt
exercises/: CMakeLists.txt
exercises/1/: CMakeLists.txt  main.cpp
exercises/2/: CMakeLists.txt  main.cpp
exercises/3/: CMakeLists.txt  main.cpp
exercises/4/: CMakeLists.txt  main.cpp
exercises/5/: main.cpp
exercises/6/: CMakeLists.txt  main.cpp
libs/cmn/: CMakeLists.txt  file.cpp  file.h
libs/cmn/include/: file.h  type_traits.h
